--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,11 @@ h2,
 h3,
 p {
     margin: 0;
+    padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h2,
@@ -44,6 +49,7 @@ p {
 
 body {
     background: #E0F1E7;
+    font-family: "Karla";
 }
 
 .two-columns {
@@ -101,4 +107,50 @@ body {
   @keyframes fadeout {
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
+  }
+
+  .container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 8rem;
+  }
+
+  .container-card {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 3%;
+  }
+
+  .label-control {
+    font-size: 16px;
+  }
+
+  .two-columns, .one-column {
+    margin-top: 1.25rem;
+  }
+
+  .required-asterisk {
+    color: hsl(169, 82%, 27%);
+  }
+
+  input[type='text'] {
+    width: 20rem;
+    height: 2.5rem;
+    border-radius: 8px;
+  }
+
+  .two-columns:nth-child(1) {
+    margin-right: 20px;
+  }
+  
+  input[type='email'] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 8px;
+  }
+  
+  h1 {
+    color: hsl(169, 82%, 27%)
   }
