--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,12 +114,12 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 8rem;
+    margin: 8rem 0;
   }
 
   .container-card {
     background-color: white;
-    padding: 2rem;
+    padding: 2.8rem;
     border-radius: 3%;
   }
 
@@ -128,7 +128,7 @@ body {
   }
 
   .two-columns, .one-column {
-    margin-top: 1.25rem;
+    margin-top: 1rem;
   }
 
   .required-asterisk {
@@ -137,8 +137,9 @@ body {
 
   input[type='text'] {
     width: 20rem;
-    height: 2.5rem;
+    height: 3rem;
     border-radius: 8px;
+    border: 1px solid hsl(169, 82%, 27%);
   }
 
   .two-columns:nth-child(1) {
@@ -147,10 +148,79 @@ body {
   
   input[type='email'] {
     width: 100%;
-    height: 2.5rem;
+    height: 3rem;
     border-radius: 8px;
+    border: 1px solid hsl(169, 82%, 27%);
   }
   
   h1 {
-    color: hsl(169, 82%, 27%)
+    color: hsl(169, 82%, 10%);
+    margin: .5rem 0;
+  }
+
+  label {
+    margin-bottom: .5rem;
+  }
+
+  #query-types {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .query-types {
+    border: 1px solid hsl(169, 82%, 27%);
+    height: 3rem;
+    border-radius: 8px;
+    width: 48%;
+    display: flex;
+    align-items: center;
+  }
+
+  .query-types label {
+    margin: 0;
+    font-size: 1.1rem;
+  }
+
+  .query-types input[type='radio'] {
+    margin: 0 1rem 0 1.5rem;
+    height: 1rem;
+    width: 1rem;
+    border: 1px solid;
+  }
+
+  textarea {
+    resize: none;
+    width: 100%;
+    height: 6rem;
+    border-radius: 8px;
+    border: 1px solid hsl(169, 82%, 27%);
+  }
+
+  input[type='checkbox'] {
+    height: 1rem;
+    width: 1rem;
+    margin: 0;
+    margin-right: 1rem;
+  }
+
+  #consent-text {
+    margin: 0;
+  }
+
+  #checkbox-flex {
+    display: flex;
+    align-items: center;
+    margin-top: 1.25rem;
+  }
+  
+  button {
+    background-color: hsl(169, 82%, 27%);
+    width: 100%;
+    color: hsl(0, 0%, 100%);
+    padding: 1.25rem;
+    border: 0 solid;
+    border-radius: 10px;
+    font-size: 1.25rem;
+    margin-top: 1.5rem;
   }
