--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,8 +57,13 @@ body {
 }
 
 .label-control {
-    display: block;
+    display: inline-block;
 }
+
+input {
+  display: block;
+}
+
 
 
 /* Toast Notification */
@@ -121,14 +126,25 @@ body {
     background-color: white;
     padding: 2.8rem;
     border-radius: 3%;
+    margin-bottom: 1rem;
   }
 
   .label-control {
     font-size: 16px;
   }
 
-  .two-columns, .one-column {
+  .full-name, .one-column {
     margin-top: 1rem;
+  }
+
+  #query-label {
+    margin-bottom: 1rem;
+  }
+
+  .full-name {
+    display: flex;
+    justify-content: center;
+    align-items: start;
   }
 
   .required-asterisk {
@@ -140,6 +156,7 @@ body {
     height: 3rem;
     border-radius: 8px;
     border: 1px solid hsl(169, 82%, 27%);
+    padding: 0 .75rem;
   }
 
   .two-columns:nth-child(1) {
@@ -149,13 +166,14 @@ body {
   input[type='email'] {
     width: 100%;
     height: 3rem;
+    padding: 0 .75rem;
     border-radius: 8px;
     border: 1px solid hsl(169, 82%, 27%);
   }
   
   h1 {
     color: hsl(169, 82%, 10%);
-    margin: .5rem 0;
+    margin: .5rem 0 2rem;
   }
 
   label {
@@ -175,11 +193,14 @@ body {
     width: 48%;
     display: flex;
     align-items: center;
+    cursor: pointer;
+    user-select: none;
   }
 
   .query-types label {
     margin: 0;
     font-size: 1.1rem;
+    cursor: pointer;
   }
 
   .query-types input[type='radio'] {
@@ -195,6 +216,7 @@ body {
     height: 6rem;
     border-radius: 8px;
     border: 1px solid hsl(169, 82%, 27%);
+    padding: .75rem .75rem;
   }
 
   input[type='checkbox'] {
@@ -211,7 +233,7 @@ body {
   #checkbox-flex {
     display: flex;
     align-items: center;
-    margin-top: 1.25rem;
+    margin-top: 2.5rem;
   }
   
   button {
@@ -223,4 +245,10 @@ body {
     border-radius: 10px;
     font-size: 1.25rem;
     margin-top: 1.5rem;
+  }
+
+  .validation-paragraph ,
+  #validation-query-type {
+    color: hsl(0, 66%, 54%);
+    margin-top: .75rem;;
   }
