--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,7 @@ p {
 
 * {
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 h2,
@@ -50,6 +51,7 @@ p {
 body {
     background: #E0F1E7;
     font-family: "Karla";
+    font-weight: 400;
 }
 
 .two-columns {
@@ -60,8 +62,13 @@ body {
     display: inline-block;
 }
 
-input {
+input,
+textarea {
   display: block;
+  outline: none;
+  font-family: "Karla";
+  font-weight: 400;
+  font-size: 14px;
 }
 
 
@@ -130,7 +137,7 @@ input {
   }
 
   .label-control {
-    font-size: 16px;
+    font-size: 16px !important;
   }
 
   .full-name, .one-column {
@@ -155,25 +162,33 @@ input {
     width: 20rem;
     height: 3rem;
     border-radius: 8px;
-    border: 1px solid hsl(169, 82%, 27%);
-    padding: 0 .75rem;
+    border: 1px solid hsl(186, 15%, 59%);
+    padding: 0 1rem;
   }
 
   .two-columns:nth-child(1) {
     margin-right: 20px;
   }
   
+  input[type='email']:focus,
+  input[type='text']:focus,
+  textarea:focus {
+    border: 1px solid hsl(169, 82%, 27%);
+  }
+
   input[type='email'] {
     width: 100%;
     height: 3rem;
-    padding: 0 .75rem;
+    padding: 0 1rem;
     border-radius: 8px;
-    border: 1px solid hsl(169, 82%, 27%);
+    border: 1px solid hsl(186, 15%, 59%);
   }
   
   h1 {
-    color: hsl(169, 82%, 10%);
+    color: hsl(187, 24%, 22%);
     margin: .5rem 0 2rem;
+    font-weight: 700;
+    font-size: 2rem;
   }
 
   label {
@@ -187,7 +202,7 @@ input {
   }
 
   .query-types {
-    border: 1px solid hsl(169, 82%, 27%);
+    border: 1px solid hsl(186, 15%, 59%);
     height: 3rem;
     border-radius: 8px;
     width: 48%;
@@ -204,10 +219,17 @@ input {
   }
 
   .query-types input[type='radio'] {
-    margin: 0 1rem 0 1.5rem;
-    height: 1rem;
-    width: 1rem;
-    border: 1px solid;
+    margin: 0 .75rem 0 1.5rem;
+    height: 1.5rem;
+    width: 1.2rem;
+    opacity:0.5;
+  }
+
+  .query-types input[type='radio']:checked,
+  input[type='checkbox']:checked
+   {
+    accent-color: hsl(169, 82%, 27%);
+    opacity: 100;
   }
 
   textarea {
@@ -215,8 +237,8 @@ input {
     width: 100%;
     height: 6rem;
     border-radius: 8px;
-    border: 1px solid hsl(169, 82%, 27%);
-    padding: .75rem .75rem;
+    border: 1px solid hsl(186, 15%, 59%);
+    padding: .75rem 1rem;
   }
 
   input[type='checkbox'] {
@@ -245,6 +267,11 @@ input {
     border-radius: 10px;
     font-size: 1.25rem;
     margin-top: 1.5rem;
+    cursor: pointer;
+  }
+
+  button:active {
+    background-color: #063F36;
   }
 
   .validation-paragraph ,
