--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,205 +77,346 @@ textarea {
 
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #toast-notification {
-    visibility: hidden; /* Hidden by default. Visible on click */
-    min-width: 250px; /* Set a default minimum width */
-    margin-left: -125px; /* Divide value of min-width by 2 */
-    background-color: #333; /* Black background color */
-    color: #fff; /* White text color */
-    text-align: center; /* Centered text */
-    border-radius: 2px; /* Rounded borders */
-    padding: 16px; /* Padding */
-    position: fixed; /* Sit on top of the screen */
-    z-index: 1; /* Add a z-index if needed */
-    left: 50%; /* Center the snackbar */
-    bottom: 30px; /* 30px from the bottom */
-  }
-  
-  /* Show the snackbar when clicking on a button (class added with JavaScript) */
-  #toast-notification.show {
-    visibility: visible; /* Show the snackbar */
-    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-    However, delay the fade out process for 2.5 seconds */
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  }
-  
-  /* Animations to fade the snackbar in and out */
-  @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
-  }
-  
-  @keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
-  }
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
 
-  .container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 8rem 0;
-  }
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#toast-notification.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
 
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 8rem 0;
+}
+
+.container-card {
+  position: relative;
+  background-color: white;
+  padding: 2.8rem;
+  border-radius: 15px;
+  margin-bottom: 1rem;
+}
+
+.label-control {
+  font-size: 16px !important;
+}
+
+.full-name, .one-column {
+  margin-top: 1rem;
+}
+
+#query-label {
+  margin-bottom: 1rem;
+}
+
+.full-name {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
+.required-asterisk {
+  color: hsl(169, 82%, 27%);
+}
+
+input[type='text'] {
+  width: 20rem;
+  height: 3rem;
+  border-radius: 8px;
+  border: 1px solid hsl(186, 15%, 59%);
+  padding: 0 1rem;
+}
+
+.two-columns:nth-child(1) {
+  margin-right: 20px;
+}
+
+input[type='email']:focus,
+input[type='text']:focus,
+textarea:focus {
+  border: 1px solid hsl(169, 82%, 27%);
+}
+
+input[type='email'] {
+  width: 100%;
+  height: 3rem;
+  padding: 0 1rem;
+  border-radius: 8px;
+  border: 1px solid hsl(186, 15%, 59%);
+}
+
+h1 {
+  color: hsl(187, 24%, 22%);
+  margin: .5rem 0 2rem;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+label {
+  margin-bottom: .5rem;
+}
+
+#query-types {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.query-types {
+  border: 1px solid hsl(186, 15%, 59%);
+  height: 3rem;
+  border-radius: 8px;
+  width: 48%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.query-types label {
+  margin: 0;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.query-types input[type='radio'] {
+  margin: 0 .75rem 0 1.5rem;
+  height: 1.5rem;
+  width: 1.2rem;
+  opacity:0.5;
+}
+
+.query-types input[type='radio']:checked,
+input[type='checkbox']:checked
+  {
+  accent-color: hsl(169, 82%, 27%);
+  opacity: 100;
+}
+
+textarea {
+  resize: none;
+  width: 100%;
+  height: 6rem;
+  border-radius: 8px;
+  border: 1px solid hsl(186, 15%, 59%);
+  padding: .75rem 1rem;
+}
+
+input[type='checkbox'] {
+  height: 1rem;
+  width: 1rem;
+  margin: 0;
+  margin-right: 1rem;
+}
+
+#consent-text {
+  margin: 0;
+}
+
+#checkbox-flex {
+  display: flex;
+  align-items: center;
+  margin-top: 2.5rem;
+}
+
+button {
+  background-color: hsl(169, 82%, 27%);
+  width: 100%;
+  color: hsl(0, 0%, 100%);
+  padding: 1.25rem;
+  border: 0 solid;
+  border-radius: 10px;
+  font-size: 1.25rem;
+  margin-top: 1.5rem;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: #063F36;
+}
+
+.validation-paragraph ,
+#validation-query-type {
+  color: hsl(0, 66%, 54%);
+  margin-top: .75rem;;
+}
+
+@media only screen and (max-width: 768px) {
   .container-card {
-    background-color: white;
-    padding: 2.8rem;
-    border-radius: 3%;
-    margin-bottom: 1rem;
+    padding: 1.8rem 2.2rem;
+  }
+  .label-control,
+  .label-control span{
+    font-size: .9rem !important;
+  } 
+
+  input[type='text'] {
+    width: 12rem;
   }
 
-  .label-control {
-    font-size: 16px !important;
-  }
-
-  .full-name, .one-column {
-    margin-top: 1rem;
-  }
-
-  #query-label {
-    margin-bottom: 1rem;
+  h1 {
+    font-size: 1.5rem;
+    margin: .5rem 0 1.5rem;
   }
 
   .full-name {
-    display: flex;
-    justify-content: center;
-    align-items: start;
+    margin-top: .5rem;
   }
 
-  .required-asterisk {
-    color: hsl(169, 82%, 27%);
-  }
-
-  input[type='text'] {
-    width: 20rem;
-    height: 3rem;
-    border-radius: 8px;
-    border: 1px solid hsl(186, 15%, 59%);
-    padding: 0 1rem;
-  }
-
-  .two-columns:nth-child(1) {
-    margin-right: 20px;
-  }
-  
-  input[type='email']:focus,
-  input[type='text']:focus,
-  textarea:focus {
-    border: 1px solid hsl(169, 82%, 27%);
-  }
-
-  input[type='email'] {
-    width: 100%;
-    height: 3rem;
-    padding: 0 1rem;
-    border-radius: 8px;
-    border: 1px solid hsl(186, 15%, 59%);
-  }
-  
-  h1 {
-    color: hsl(187, 24%, 22%);
-    margin: .5rem 0 2rem;
-    font-weight: 700;
-    font-size: 2rem;
-  }
-
-  label {
-    margin-bottom: .5rem;
-  }
-
-  #query-types {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .query-types {
-    border: 1px solid hsl(186, 15%, 59%);
-    height: 3rem;
-    border-radius: 8px;
-    width: 48%;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    user-select: none;
+  .one-column {
+    margin-top: 0;
   }
 
   .query-types label {
-    margin: 0;
-    font-size: 1.1rem;
-    cursor: pointer;
+    font-size: .9rem;
   }
 
-  .query-types input[type='radio'] {
-    margin: 0 .75rem 0 1.5rem;
-    height: 1.5rem;
-    width: 1.2rem;
-    opacity:0.5;
-  }
-
-  .query-types input[type='radio']:checked,
-  input[type='checkbox']:checked
-   {
-    accent-color: hsl(169, 82%, 27%);
-    opacity: 100;
-  }
-
-  textarea {
-    resize: none;
-    width: 100%;
-    height: 6rem;
-    border-radius: 8px;
-    border: 1px solid hsl(186, 15%, 59%);
-    padding: .75rem 1rem;
-  }
-
-  input[type='checkbox'] {
-    height: 1rem;
+  .query-types input[type="radio"] {
     width: 1rem;
-    margin: 0;
-    margin-right: 1rem;
+    height: 1.2rem;
+    margin-right: .6rem;
   }
-
-  #consent-text {
-    margin: 0;
+  
+  #submit-button {
+    font-size: 1rem;
+    padding: 1rem;
+    margin-top: 1.25rem;
   }
 
   #checkbox-flex {
-    display: flex;
-    align-items: center;
-    margin-top: 2.5rem;
+    margin-top: 2rem;
   }
   
-  button {
-    background-color: hsl(169, 82%, 27%);
+  .attribution,
+  .attribution a{
+    font-size: .8rem !important;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    margin-top: 4rem;
+    min-width: 320px
+  }
+  .container-card {
+    padding: 1.5rem 1.75rem;
+  }
+  .label-control,
+  .label-control span{
+    font-size:.85rem !important;
+  } 
+
+  input[type='text'] {
     width: 100%;
-    color: hsl(0, 0%, 100%);
-    padding: 1.25rem;
-    border: 0 solid;
-    border-radius: 10px;
-    font-size: 1.25rem;
-    margin-top: 1.5rem;
-    cursor: pointer;
+    height: 2.5rem;
   }
 
-  button:active {
-    background-color: #063F36;
+  input[type='email'] {
+    height: 2.5rem;
   }
 
-  .validation-paragraph ,
-  #validation-query-type {
-    color: hsl(0, 66%, 54%);
-    margin-top: .75rem;;
+  .two-columns {
+    margin-right: 0 !important;
+    display: block;
+    width: 100%;
   }
+
+  .full-name {
+    flex-direction: column;
+  }
+
+  h1 {
+    margin: .5rem 0 1.25rem;
+  }
+
+  #query-types {
+    flex-direction: column;
+  }
+
+  .query-types {
+    display: flex;
+  }
+  
+  .query-types:nth-child(1) {
+    margin-bottom: 1.2rem;
+  }
+
+  .query-types label {
+    font-size: 1.05rem;
+  }
+
+  .query-types input[type="radio"] {
+    width: 1.2rem;
+    height: 1.2rem;
+    margin-left: 2rem;
+  }
+  
+  #submit-button {
+    font-size: .8rem;
+    padding: .8rem;
+    margin-top: 1rem;
+  }
+
+  #checkbox-flex {
+    margin-top: 1.25rems;
+    width: 300px;
+  }
+
+  #checkbox-flex input[type='checkbox'] {
+    margin-right: .5rem;
+    width: .8rem;
+  }
+
+  #checkbox-flex label {
+    font-size: .95rem !important;
+  }
+
+  .attribution,
+  .attribution a{
+    font-size: .7rem !important;
+  }
+
+  textarea {
+    height: 200px;
+  }
+}
